# DataScience

./: CMakeLists.txt  LICENSE  README.md
Data/: Data.cpp  Data.hpp
Maths/: linalg.cpp  linalg.hpp
benchmark/: bench_data.cpp  bench_linalg.cpp
docs/: III_benchmark.md  II_benchmark.md  II_linalg.md  IV_stats.md  I_dataframe.md  I_linalg.md  VIII_clustering.md  VII_regressions.md  VI_stats.md  VI_validation.md  V_preprocess_valid.md  V_preprocessing.md
include/Data/: Data.hpp
include/Linalg/: Linalg.hpp  LinalgAVX2.hpp  LinalgAVX2_threaded.hpp  LinalgEigen.hpp  LinalgMKL.hpp  LinalgNaive.hpp
include/Linalg/detail/: LinalgImpl.hpp
include/Models/: Regressions.hpp
include/Models/Supervised/Classification/: ClassBase.hpp  Classifications.hpp  LogisticReg.hpp  RandomForest.hpp  SVM.hpp
include/Models/Supervised/Regression/: ElasticNetReg.hpp  LassoReg.hpp  LinearReg.hpp  RegBase.hpp  Regressions.hpp  RidgeReg.hpp  StepwiseReg.hpp
include/Models/Unsupervised/: Kmeans.hpp
include/Preprocessing/: Imputation.hpp  PCA.hpp  Preprocessing.hpp  Scaling.hpp  TrainTestSplit.hpp
include/Stats/: Time_series.hpp  stats.hpp  stats_class.hpp  stats_reg.hpp
include/Utils/: InfoCPU.hpp  TestSuite.hpp  ThreadPool.hpp
include/Validation/: Validation.hpp
src/Data/: Data.cpp
src/Linalg/: Linalg.cpp  LinalgAVX2.cpp  LinalgAVX2_threaded.cpp  LinalgEigen.cpp  LinalgMKL.cpp  LinalgNaive.cpp
src/Linalg/backends/: LinalgAVX2.cpp  LinalgAVX2.hpp  LinalgAVX2_threaded.cpp  LinalgAVX2_threaded.hpp  LinalgEigen.cpp  LinalgEigen.hpp  LinalgMKL.cpp  LinalgMKL.hpp  LinalgNaive.cpp  LinalgNaive.hpp
src/Linalg/detail/: LinalgImpl.cpp  LinalgImpl.hpp
src/Models/: Regressions.cpp
src/Models/Supervised/Classification/: ClassBase.cpp  LogisticReg.cpp  RandomForest.cpp  SVM.cpp
src/Models/Supervised/Regression/: ElasticNetReg.cpp  LassoReg.cpp  LinearReg.cpp  RegBase.cpp  RidgeReg.cpp  StepwiseReg.cpp
src/Models/Unsupervised/: Kmeans.cpp
src/Preprocessing/: Imputation.cpp  PCA.cpp  Scaling.cpp  TrainTestSplit.cpp
src/Stats/: Time_series.cpp  stats.cpp  stats_class.cpp  stats_reg.cpp
src/Utils/: TestSuite.cpp  TestSuite.hpp  TheadPool.cpp  ThreadPool.cpp  ThreadPool.hpp  Utils.cpp  Utils.hpp
src/Validation/: Validation.cpp
tests/: iris.csv  tests_AVX2.cpp  tests_AVX2_threaded.cpp  tests_Eigen.cpp  tests_MKL.cpp  tests_data.cpp  tests_main.cpp  tests_naive.cpp
tests/backend/: tests_AVX2.cpp  tests_AVX2_threaded.cpp  tests_Eigen.cpp  tests_MKL.cpp  tests_data.cpp  tests_main.cpp  tests_naive.cpp
tests/datasets/: iris_bis.csv  iris_bis_mult.csv  iris_mult.csv  iris_multinv.csv  iris_sum.csv  iris_t.csv  mat_mult.csv  mat_multinv.csv
tests/datasets/backend/: iris_multinv.csv  iris_sum.csv  iris_x.csv  mat_mult.csv
tests/regression/: tests_OLS.cpp  tests_Reg.cpp  tests_Ridge.cpp  tests_class.cpp  tests_main.cpp
